--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&family=Yellowtail&display=swap" rel="stylesheet">
     <title>React App</title>
 
+    <script src="https://kit.fontawesome.com/a2c70a8f6f.js" crossorigin="anonymous"></script>
+
 
   </head>
   <body>
